added prototypes for new server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "string.h": "c"
+        "*.cu": "c",
+        "string.h": "c",
+        "time.h": "c"
     }
 }
