--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "strings.h": "c",
         "socket.h": "c",
         "select.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "system_error": "c",
+        "type_traits": "cpp"
     }
 }
