finish basic room utilities and basic mechanisms for server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "select.h": "c",
         "stdlib.h": "c",
         "system_error": "c",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "limits": "c"
     }
 }
