--- a/alpha_release/Chat_Alpha_src/Makefile
+++ b/alpha_release/Chat_Alpha_src/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -std=c99 -Wall -g 
-LFLAGS = -Wall 
+LFLAGS = -Wall -lm
 DEBUG := -DDEBUG -g
 MAIN := -DMAIN
 
@@ -9,6 +9,7 @@ MAIN := -DMAIN
 GTKLIBS := `pkg-config --libs gtk+-2.0`
 
 #tar
+all: TestClientGUI TestServerGUI TestRSA TestServer TestClient ServerGUI Server Client
 
 tar: 
 	gtar cvzf Chat_Alpha_src.tar.gz bin doc src COPYRIGHT INSTALL README Makefile
@@ -25,10 +26,20 @@ TestServerGUI: ./src/serverGUI_DEBUG.o
 TestRSA: ./src/rsa_DEBUG.o
 	$(CC) $(LFLAGS) $(DEBUG) $(MAIN) $(^) -o ./bin/TestRSA
 
-TestServer:
+TestServer: ./src/tcpPacket_debug.o ./src/server_back_end_debug.o ./src/server_main.o
+	$(CC)  $(DEBUG) $(MAIN) $(^) -o ./bin/TestServer $(LFLAGS)
 
-TestClient:
+TestClient: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/client_main.o ./src/utils.o
+	$(CC)  $(DEBUG) $(MAIN) $(^) -o ./bin/TestClient $(LFLAGS)
 
+ServerGUI: ./src/serverGUI.o
+	$(CC) $(LFLAGS) $(GTKLIBS) $(^) -o ./bin/ServerGUI
+
+Server: ./src/tcpPacket.o ./src/server_back_end.o ./src/server_main.o
+	$(CC)  $(MAIN) $(^) -o ./bin/Server $(LFLAGS)
+
+Client: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/client_main.o ./src/utils.o
+	$(CC)  $(MAIN) $(^) -o ./bin/Client $(LFLAGS)
 #clean
 
 clean: 
