--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "utils.h": "c",
         "typeinfo": "cpp",
         "tcppacket.h": "c",
-        "protocol_const.h": "c"
+        "protocol_const.h": "c",
+        "tcpgui.h": "c"
     }
 }
