--- a/beta_release/Chat_Beta_src/src/Makefile
+++ b/beta_release/Chat_Beta_src/src/Makefile
@@ -11,7 +11,7 @@ executable_file := server_main client_main $(testServerBin)
 GTKINC := `pkg-config --cflags gtk+-2.0`
 GTKLIBS := `pkg-config --libs gtk+-2.0`
 
-all: utils.o protocol.o server_main.o client_main.o tcpGUI_debug.o tcpGUI.o tcpPacket_debug.o tcpPacket.o server_back_end.o server_back_end_debug.o
+all: fifo_debug.o server_main.o client_main.o utils.o protocol.o tcpPacket_debug.o tcpPacket.o tcpGUI_debug.o tcpGUI.o server_back_end_debug.o server_back_end.o tophChatUsers.o GTK.o rsa.o GTKMain.o emoji.o serverGUI.o encrypt.o rsa_DEBUG.o serverGUI_DEBUG.o test_emoji.o 
 
 #####################END OF TDD AREA################################
 
@@ -99,7 +99,7 @@ test_emoji.o: testEmoji.c emoji.h
 #Test Executables
 
 test_emoji: test_emoji.o emoji.o
-	$(CC) $(CFLAGS) $(DEBUG) $(GTKLIBS) $(^) -o $(@)
+	$(CC) $(LFLAGS) $(DEBUG) $(GTKLIBS) $(^) -o $(@)
 
 test_RSA: rsa_DEBUG.o 
 	$(CC) $(LFLAGS) $(DEBUG) $(MAIN) $(^) -o $(@)
