--- a/beta_release/Chat_Beta_src/Makefile
+++ b/beta_release/Chat_Beta_src/Makefile
@@ -7,21 +7,20 @@ MAIN := -DMAIN
 # compiler flags for GTK usage
 
 GTKLIBS := `pkg-config --libs gtk+-2.0`
-GTKINC := `pkg-config --libs --cflags gtk+-2.0`
 
 #tar
 all: ClientGUI ServerGUI Server Client
 
-test: TestClientGUI TestServerGUI TestRSA TestServer TestClient
+test: TestClientGUI TestServerGUI TestRSA TestServer TestClient TestEmoji
  
 tar: 
 	gtar cvzf Chat_Alpha_src.tar.gz bin doc src COPYRIGHT INSTALL README Makefile
 
 #test executables
-test_executables := ./bin/TestClientGUI ./bin/TestServerGUI ./bin/TestRSA ./bin/TestServer ./bin/TestClient
+test_executables := ./bin/TestClientGUI ./bin/TestServerGUI ./bin/TestRSA ./bin/TestServer ./bin/TestClient ./bin/TestEmoji
 
-TestClientGUI: ./src/GTK.o ./src/GTKMain.c
-	$(CC) $(CFLAGS) $(GTKINC) ./src/GTK.o ./src/GTKMain.c -o ./bin/TestClientGUI
+TestClientGUI: ./src/GTK.o ./src/GTKMain.o
+	$(CC) $(DEBUG) $(GTKLIBS) $(^) -o ./bin/TestClientGUI $(LFLAGS)
 
 TestServerGUI: ./src/serverGUI_DEBUG.o
 	$(CC) $(DEBUG) $(GTKLIBS) $(^) -o ./bin/TestServerGUI $(LFLAGS)
@@ -30,16 +29,19 @@ TestRSA: ./src/rsa_DEBUG.o
 	$(CC) $(DEBUG) $(MAIN) $(^) -o ./bin/TestRSA $(LFLAGS)
 
 TestServer: ./src/tcpPacket_debug.o ./src/server_back_end_debug.o ./src/server_main.o
-	$(CC)  $(DEBUG) $(MAIN) $(^) -o ./bin/TestServer $(LFLAGS)
+	$(CC) $(DEBUG) $(MAIN) $(^) -o ./bin/TestServer $(LFLAGS)
 
 TestClient: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/client_main.o ./src/utils.o
-	$(CC)  $(DEBUG) $(MAIN) $(^) -o ./bin/TestClient $(LFLAGS)
+	$(CC) $(DEBUG) $(MAIN) $(^) -o ./bin/TestClient $(LFLAGS)
 
+TestEmoji: ./src/test_emoji.o ./src/emoji.o
+	$(CC) $(DEBUG) $(GTKLIBS) $(^) -o ./bin/TestEmoji $(LFLAGS)
+	
 #executables
 executables := ./bin/ServerGUI ./bin/Server ./bin/Client ./bin/ClientGUI
 
-ClientGUI: ./src/GTK.o ./src/GTKMain.c
-	$(CC) $(CFLAGS) $(GTKINC) ./src/GTK.o ./src/GTKMain.c -o ./bin/ClientGUI
+ClientGUI: ./src/GTK.o ./src/GTKMain.
+	$(CC) $(GTKLIBS) $(^) -o ./bin/ClientGUI $(LFLAGS)
 
 ServerGUI: ./src/serverGUI.o
 	$(CC) $(GTKLIBS) $(^) -o ./bin/ServerGUI $(LFLAGS)
@@ -52,4 +54,4 @@ Client: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/clie
 #clean
 
 clean: 
-	rm -rf *./bin/*.o $(test_executables) $(executables)
+	rm -rf ./bin/*.o $(test_executables) $(executables)
