--- a/beta_release/Chat_Beta_src/src/Makefile
+++ b/beta_release/Chat_Beta_src/src/Makefile
@@ -11,22 +11,26 @@ executable_file := server_main client_main $(testServerBin)
 GTKINC := `pkg-config --cflags gtk+-2.0`
 GTKLIBS := `pkg-config --libs gtk+-2.0`
 
-all: utils.o protocol.o server_main.o client_main.o tcpGUI_debug.o tcpGUI.o tcpPacket_debug.o tcpPacket.o server_back_end.o server_back_end_debug.o
+all: fifo_debug.o server_main.o client_main.o utils.o protocol.o tcpPacket_debug.o tcpPacket.o tcpGUI_debug.o tcpGUI.o server_back_end_debug.o server_back_end.o tophChatUsers.o GTK.o rsa.o GTKMain.o emoji.o serverGUI.o encrypt.o rsa_DEBUG.o serverGUI_DEBUG.o test_emoji.o 
 
 #####################END OF TDD AREA################################
 
 #Executables
 
-server_main: tcpPacket_debug.o server_back_end_debug.o server_main.o utils.o protocol.o tophChatUsers.o constants.h fifo_debug.o 
+server_main: tcpPacket_debug.o server_back_end_debug.o server_main.o utils.o protocol.o tophChatUsers.o constants.h fifo.o
 	$(CC)  $(^) -o $(@)	$(LFLAGS)
+
 client_main: tcpPacket_debug.o protocol.o tcpGUI_debug.o client_main.o utils.o
 	$(CC)  $(^) -o $(@)	$(LFLAGS)
 
-ChatGUI: GTKMain.o GTK.o emoji.o protocol.o utils.o tcpPacket_debug.o tcpGUI_debug.o fifo_debug.o 
+ChatGUI: GTKMain.o emoji.o protocol.o utils.o tcpPacket_debug.o tcpGUI_debug.o fifo_debug.o 
 	$(CC) $(CFLAGS) $(GTKLIBS) $(^) -o $(@)
 
 fifo_debug.o: fifo.c fifo.h constants.h
 	$(CC) -c fifo.c $(CFLAGS) $(DEBUG) -o $(@)
+	
+fifo.o: fifo.c fifo.h constants.h
+	$(CC) -c fifo.c $(CFLAGS) -o $(@)
 	
 serverGUI: serverGUI.o 
 	$(CC) $(LFLAGS) $(GTKLIBS) $(^) -o $(@)	
@@ -38,8 +42,11 @@ server_main.o: server_main.c
 client_main.o: client_main.c 
 	$(CC) -c $(<) $(CFLAGS) $(DEBUG) -o $(@)
 
-utils.o: utils.c utils.h constants.h
+utils_debug.o: utils.c utils.h constants.h
 	$(CC) -c $(<) $(CFLAGS) $(DEBUG) -o $(@)
+
+utils.o: utils.c utils.h constants.h
+	$(CC) -c $(<) $(CFLAGS) -o $(@)
 
 protocol.o: protocol.c protocol.h protocol_const.h utils.h constants.h server_back_end.h
 	$(CC) -c $(<) $(CFLAGS) $(DEBUG) -o $(@)
@@ -51,13 +58,13 @@ tcpPacket.o: tcpPacket.c tcpPacket.h fifo.h tcpGUI.h constants.h
 	$(CC) -c $(<) $(CFLAGS) -o $(@)
 
 tcpGUI_debug.o: tcpGUI.c tcpGUI.h constants.h 
-	$(CC) -c $(<) $(CFLAGS) $(DEBUG) -o $(@)
+	$(CC) -c $(<) $(CFLAGS) $(MAIN) $(DEBUG) -o $(@)
 
 tcpGUI.o: tcpGUI.c tcpGUI.h constants.h 
 	$(CC) -c $(<) $(CFLAGS) -o $(@)
 
 server_back_end_debug.o: server_back_end.c server_back_end.h constants.h
-	$(CC) -c $(<) $(CFLAGS) $(DEBUG) -o $(@)
+	$(CC) -c $(<) $(CFLAGS) $(MAIN) $(DEBUG) -o $(@)
 
 server_back_end.o: server_back_end.c server_back_end.h constants.h
 	$(CC) -c $(<) $(CFLAGS) -o $(@)
@@ -73,7 +80,7 @@ GTK.o:  GTK.c GTK.h emoji.h
 rsa.o: rsa.c rsa.h 
 	$(CC) $(CLFAGS) -c $(<) -o $(@)
 
-GTKMain.o: GTKMain.c GTK.h emoji.h
+GTKMain.o: GTKMain.c emoji.h
 	$(CC) $(CFLAGS) $(GTKINC) -c $(<) -o $(@)
 
 emoji.o: emoji.c emoji.h
@@ -107,7 +114,20 @@ test_RSA: rsa_DEBUG.o
 test_serverGUI: serverGUI_DEBUG.o
 	$(CC) $(LFLAGS) $(DEBUG) $(GTKLIBS) $(^) -o $(@)
 
-#clean 
+test_Encrypt: encrypt_DEBUG.o
+	$(CC) $(LFLAGS) $(DEBUG) $(MAIN) $(^) -o $(@)
+
+test_server_back_end: tcpPacket_debug.o server_back_end_debug.o utils_debug.o protocol.o tophChatUsers.o constants.h fifo_debug.o 
+	$(CC)  $(^) $(DEBUG) $(MAIN) -o $(@)	$(LFLAGS)
+
+test_server_main: tcpPacket_debug.o server_back_end.o server_main.o utils_debug.o protocol.o tophChatUsers.o constants.h fifo_debug.o 
+	$(CC)  $(^) $(DEBUG) $(MAIN) -o $(@)	$(LFLAGS)
+
+test_tcp_GUI: tcpPacket_debug.o protocol.o tcpGUI_debug.o client_main.o utils_debug.o fifo_debug.o
+	$(CC)  $(^) $(DEBUG) $(MAIN) -o $(@)	$(LFLAGS)
+
+test_client_main: tcpPacket_debug.o protocol.o tcpGUI.o client_main.o utils_debug.o fifo_debug.o
+	$(CC)  $(^) $(DEBUG) $(MAIN) -o $(@)	$(LFLAGS)
 
 clean:
 	rm -rf *.o $(executable_file) -v serverGUI ChatGUI serverGUI test_RSA test_serverGUI test_emoji
