--- a/beta_release/Chat_Beta_src/Makefile
+++ b/beta_release/Chat_Beta_src/Makefile
@@ -9,10 +9,10 @@ MAIN := -DMAIN
 GTKLIBS := `pkg-config --libs gtk+-2.0`
 
 #tar
-all: ClientGUI ServerGUI Server Client
+all: ClientGUI Server Client
+	
+test: TestRSA TestEmoji
 
-test: TestClientGUI TestServerGUI TestRSA TestServer TestClient TestEmoji
- 
 tar: 
 	gtar cvzf Chat_Alpha_src.tar.gz bin doc src COPYRIGHT INSTALL README Makefile
 
@@ -40,16 +40,16 @@ TestEmoji: ./src/test_emoji.o ./src/emoji.o
 #executables
 executables := ./bin/ServerGUI ./bin/Server ./bin/Client ./bin/ClientGUI
 
-ClientGUI: ./src/GTK.o ./src/GTKMain.
+ClientGUI: ./src/GTKMain.o ./src/emoji.o ./src/protocol.o ./src/utils.o ./src/tcpPacket_debug.o ./src/tcpGUI_debug.o ./src/fifo_debug.o 
 	$(CC) $(GTKLIBS) $(^) -o ./bin/ClientGUI $(LFLAGS)
 
 ServerGUI: ./src/serverGUI.o
 	$(CC) $(GTKLIBS) $(^) -o ./bin/ServerGUI $(LFLAGS)
 
-Server: ./src/tcpPacket.o ./src/server_back_end.o ./src/server_main.o
+Server: ./src/tcpPacket_debug.o ./src/server_back_end_debug.o ./src/server_main.o ./src/utils.o ./src/protocol.o ./src/tophChatUsers.o ./src/constants.h ./src/fifo.o
 	$(CC)  $(MAIN) $(^) -o ./bin/Server $(LFLAGS)
 
-Client: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/client_main.o ./src/utils.o
+Client: ./src/tcpPacket_debug.o ./src/protocol.o ./src/tcpGUI_debug.o ./src/client_main.o ./src/utils.o ./src/fifo.o
 	$(CC)  $(MAIN) $(^) -o ./bin/Client $(LFLAGS)
 #clean
 
